src/main.css
.layout {
    display: grid;
    grid-template-columns: 20% 80%;
    grid-template-rows: 10% 90%;
    grid-template-areas:
        "left top"
        "left main";
}

.navbar {
    grid-area: top;
}

.sidebar {
    grid-area: left;
}

.main {
    grid-area: main;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
}

